# core2-kids-platform

./: .clang-format  .editorconfig  .gitignore  8encoder_debug_report.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  HANDOFF.md  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.platform
apps/busy_bus/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/busy_bus/main/: CMakeLists.txt  app_main.c  bus_game.c  bus_game.h  bus_link.c  bus_link.h  feedback.c  feedback.h  sprites.c  sprites.h  town.c  town.h  tuning.h
apps/busy_knobs/: CMakeLists.txt  FUN2_SPEC.md  README.md  sdkconfig.defaults
apps/busy_knobs/main/: CMakeLists.txt  app_main.c  knobs_game.c  knobs_game.h  tuning.h
apps/chain_lab/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/chain_lab/main/: CMakeLists.txt  app_main.c  chain_lab.c  chain_lab.h  crane_game.c  crane_game.h  tuning.h
apps/chick_pour/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/chick_pour/main/: CMakeLists.txt  app_main.c  critters.c  critters.h  feedback.c  feedback.h  flock.c  flock.h  game_state.c  game_state.h  scene.c  scene.h  tuning.h
apps/feed_monster/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/feed_monster/main/: CMakeLists.txt  app_main.c  monster_game.c  monster_game.h  tuning.h
apps/fish_pond/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/fish_pond/main/: CMakeLists.txt  app_main.c  boat.c  boat.h  bucket.c  bucket.h  chain_link.c  chain_link.h  feedback.c  feedback.h  fish.c  fish.h  idf_component.yml  pond.c  pond.h  sprites.c  sprites.h  tuning.h
apps/magic_wand/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/magic_wand/main/: CMakeLists.txt  app_main.c  firefly.c  firefly.h  garden.c  garden.h  magic_wand.c  magic_wand.h  spellbook.c  spellbook.h  tuning.h  wand_fx.c  wand_fx.h  wizard.c  wizard.h
apps/peekaboo/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/peekaboo/main/: CMakeLists.txt  album.c  album.h  app_main.c  peekaboo_game.c  peekaboo_game.h  scene.c  scene.h  tuning.h  visitor.c  visitor.h
apps/pipe_garden/: SPEC.md
apps/power_lab/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/power_lab/main/: CMakeLists.txt  app_main.c  power_lab_ctl.c  power_lab_ctl.h  power_lab_ui.c  power_lab_ui.h
apps/slingshot_feed/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/slingshot_feed/main/: CMakeLists.txt  app_main.c  feedback.c  feedback.h  meadow.c  meadow.h  sling_game.c  sling_game.h  sling_link.c  sling_link.h  sprites.c  sprites.h  tuning.h
apps/tilt_maze/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/tilt_maze/main/: CMakeLists.txt  app_main.c  game_state.c  game_state.h  idf_component.yml  maze.c  maze.h  parent_menu.c  physics.c  physics.h  render.c  render.h
apps/unit_bench/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults
apps/unit_bench/main/: CMakeLists.txt  app_main.c  unit_bench_scan.c  unit_bench_scan.h  unit_bench_ui.c  unit_bench_ui.h
components/app_core/: CMakeLists.txt  app_state.c  engine.c  shared_state.c
components/app_core/include/: app_state.h  app_tuning.h  engine.h  kids_safety.h  shared_state.h
components/app_slot/: CMakeLists.txt  README.md  app_slot.c
components/app_slot/include/: app_slot.h
components/audio_fx/: CMakeLists.txt  README.md  audio_fx.c
components/audio_fx/include/: audio_fx.h
components/bsp_core2/: CMakeLists.txt  Kconfig  bsp_audio.c  bsp_display.c  bsp_i2c.c  bsp_imu.c  bsp_leds.c  bsp_power.c  bsp_touch.c  idf_component.yml
components/bsp_core2/include/: bsp.h  bsp_port.h  bsp_priv.h  platform_pins.h
components/common/: CMakeLists.txt  app_nvs.c  i2c_scan.c
components/common/include/: app_nvs.h  i2c_scan.h
components/core2_board/: CMakeLists.txt  README.md  core2_board.c
components/core2_board/include/: core2_board.h
components/core2_power/: CMakeLists.txt  README.md  core2_power.c
components/core2_power/include/: core2_power.h
components/core2_sleep/: CMakeLists.txt  README.md  core2_sleep.c
components/core2_sleep/include/: core2_sleep.h
components/data_log/: CMakeLists.txt  README.md  data_log.c
components/data_log/include/: data_log.h
components/haptics/: CMakeLists.txt  README.md  haptics.c
components/haptics/include/: haptics.h
components/imu_mpu6886/: CMakeLists.txt  README.md  imu_mpu6886.c
components/imu_mpu6886/include/: imu_mpu6886.h
components/kv_store/: CMakeLists.txt  README.md  kv_store.c
components/kv_store/include/: kv_store.h
components/ledstrip_fx/: CMakeLists.txt  README.md  ledstrip_fx.c
components/ledstrip_fx/include/: ledstrip_fx.h
components/maze_audio/: CMakeLists.txt  maze_audio.c
components/maze_audio/include/: maze_audio.h
components/motion_detect/: CMakeLists.txt  README.md  motion_detect.c
components/motion_detect/include/: motion_detect.h
components/power_monitor/: CMakeLists.txt  README.md  power_monitor.c
components/power_monitor/include/: power_monitor.h
components/screenshot/: CMakeLists.txt  README.md  screenshot.c
components/touch_btns/: CMakeLists.txt  README.md  touch_btns.c
components/touch_btns/include/: touch_btns.h
components/ui_kit/: CMakeLists.txt  README.md  ui_chart.c  ui_list_menu.c  ui_status_bar.c  ui_value_card.c
components/ui_kit/include/: ui_kit.h
docs/: HARDWARE.md  ROADMAP.md
docs/platform/: BSP_GUIDE.md  Core2_v1_0.md  M5GO_Bottom2.md
docs/units/: Chain_Encoder.md  Chain_Joystick.md  Unit_8Encoder.md  Unit_DLight.md  Unit_Gesture.md  Unit_PIR.md  Unit_RGB.md  Unit_SCD41.md  Unit_Ultrasonic_I2C.md  _MCU_Firmware_I2C_Units.md  _UNIT_TEMPLATE.md
launcher/: CMakeLists.txt  README.md  sdkconfig.defaults
launcher/main/: CMakeLists.txt  app_main.c  idf_component.yml
main/: CMakeLists.txt  app_main.c  feedback.c  feedback.h  game_state.c  game_state.h  main.c  maze.c  maze.h  parent_menu.c  parent_menu.h  physics.c  physics.h  power.c  power.h  render.c  tuning.h
tools/: add_unit.sh  flash_map.md  flash_one.sh  new_app.sh  screenshot.py  serial_capture.py  verify_mazes.py
(+44 files in other folders)
